<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".model.todolist_item_Activity"
    android:background="@drawable/bg_todolist1"
    android:padding="15dp">
    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/setting"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/wildword_roman"
        android:textColor="#000"
        android:textSize="35sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/language"
            android:layout_gravity="left"
            android:fontFamily="@font/helveticaneue"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:id="@+id/lang_radion">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vietnam"
                android:id="@+id/vi_radion"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:id="@+id/en_radion"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Todolist"
            android:layout_gravity="left"
            android:fontFamily="@font/helveticaneue"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />
        <CheckBox
            android:id="@+id/todolist_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thông báo chuẩn bị task vào mỗi 6h sáng (Đang phát triển)"/>
        <CheckBox
            android:id="@+id/todolist_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thông báo kiểm tra task vào mỗi 6h tối (Đang phát triển)"/>
        <Button
            android:id="@+id/button_update_setting"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingRight="60dp"
            android:paddingLeft="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/bt_back"
            android:fontFamily="@font/wildword_roman"
            android:textSize="22dp"
            android:background="@drawable/bt_round_button_action"
            android:backgroundTint="#00acc1"
            android:layout_marginBottom="10dp" />
    </LinearLayout>
</LinearLayout>