<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".model.todolist_item_Activity"
    android:background="@drawable/bg_todolist1"
    android:padding="15dp"
    android:id="@+id/layout_item">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/id_view"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="0dp"
                android:text="..."/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="7dp">
                <CheckBox
                    android:id="@+id/CBpriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#3B5284"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/wildword_roman"
                    android:text="@string/Important"
                    android:textColor="@color/black"
                    android:textSize="24dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bt_round_button_action">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/DueTime"
                    android:fontFamily="@font/wildword_roman"
                    android:layout_gravity="center_vertical"
                    android:textSize="22dp"
                    android:padding="10dp"
                    android:textColor="@color/black"/>
                <ImageButton
                    android:id="@+id/timepicker"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/img_outline_schedule_black_48dp"
                    android:scaleType="fitCenter"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/bt_round_button"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/due_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="25dp" />
                <TextView
                    android:id="@+id/showDate"
                    android:layout_width="wrap_content"
                    android:layout_weight="10"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:inputType="text"/>
                <ImageButton
                    android:id="@+id/clrtime"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="0"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_clear"
                    android:scaleType="fitCenter"
                    android:background="@drawable/bt_round_button"
                    android:onClick="clickButton"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Repeat"
                    android:fontFamily="@font/wildword_roman"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="22dp"
                    android:padding="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/bt_round_button_action"
                    android:padding="5dp">
                        <CheckBox
                            android:id="@+id/mon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="M"
                            android:layout_gravity="center_vertical"
                            android:buttonTint="@color/black"/>
                        <CheckBox
                            android:id="@+id/tue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="T"
                            android:layout_gravity="center_vertical"
                            android:buttonTint="@color/black"/>
                        <CheckBox
                            android:id="@+id/wed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="W"
                            android:layout_gravity="center_vertical"
                            android:buttonTint="@color/black"/>
                        <CheckBox
                            android:id="@+id/thu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="T"
                            android:layout_gravity="center_vertical"
                            android:buttonTint="@color/black"/>
                        <CheckBox
                            android:id="@+id/fri"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="F"
                            android:layout_gravity="center_vertical"
                            android:buttonTint="@color/black"/>
                        <CheckBox
                            android:id="@+id/sat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sa"
                            android:layout_gravity="center_vertical"
                            android:buttonTint="@color/black"/>
                        <CheckBox
                            android:id="@+id/sun"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Su"
                            android:layout_gravity="center_vertical"
                            android:buttonTint="@color/black"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Description"
                    android:fontFamily="@font/wildword_roman"
                    android:textSize="22dp"
                    android:textColor="@color/black"
                    android:padding="10dp">
                </TextView>

                <EditText
                    android:id="@+id/task_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_item"
                    android:fontFamily="@font/helveticaneue"
                    android:gravity="left|top"
                    android:inputType="text|textMultiLine|textCapSentences"
                    android:padding="10dp"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:gravity="center_vertical|center_horizontal">
                <CheckBox
                    android:id="@+id/CBcompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#5BA8A0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Completed"
                    android:fontFamily="@font/wildword_roman"
                    android:textSize="22dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="4">
        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/button_speak"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/TapSpeak"
                android:fontFamily="@font/wildword_roman"
                android:textSize="22dp"
                android:onClick="clickButton"
                android:layout_gravity="center|top"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_round_button"
                android:padding="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginTop="100dp">
                <Button
                    android:id="@+id/button_add_task"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingRight="74dp"
                    android:paddingLeft="74dp"
                    android:text="@string/AddTask"
                    android:fontFamily="@font/wildword_roman"
                    android:textSize="22dp"
                    android:onClick="clickButton"
                    android:background="@drawable/bt_round_button_action"
                    android:backgroundTint="#4caf50"
                    android:layout_marginBottom="20dp"/>
                <Button
                    android:id="@+id/button_update_task"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingRight="60dp"
                    android:paddingLeft="60dp"
                    android:text="@string/UpdateTask"
                    android:fontFamily="@font/wildword_roman"
                    android:textSize="22dp"
                    android:onClick="clickButton"
                    android:background="@drawable/bt_round_button_action"
                    android:backgroundTint="#00acc1"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:id="@+id/button_delete_task"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingRight="60dp"
                    android:paddingLeft="60dp"
                    android:text="@string/DeleteTask"
                    android:fontFamily="@font/wildword_roman"
                    android:textSize="22dp"
                    android:onClick="clickButton"
                    android:background="@drawable/bt_round_button_action"
                    android:backgroundTint="#ef5350"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:id="@+id/button_back"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingRight="56dp"
                    android:paddingLeft="56dp"
                    android:text="@string/BackList"
                    android:fontFamily="@font/wildword_roman"
                    android:textSize="22dp"
                    android:onClick="clickButton"
                    android:background="@drawable/bt_round_button_action" />
            </LinearLayout>
        </FrameLayout>
    </TableRow>

</LinearLayout>