<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivityWishList">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg_header"
        android:elevation="10dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bgHeader"
        android:layout_marginTop="-25dp">

        <RelativeLayout
            android:id="@+id/addRltLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/updateCardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/add_Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <TextView
                        android:id="@+id/itemTView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/ItemName"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/teal_700"
                        android:textSize="18sp"
                        android:fontFamily="@font/comic_text1"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/itemName_input2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/priceTView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/ItemPrice"
                        android:textColor="@color/teal_700"
                        android:fontFamily="@font/comic_text1"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/itemPrice_input2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="text"
                        android:fontFamily="@font/poppins_medium"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/updateCardView"
                android:layout_alignLeft="@+id/updateCardView"
                android:layout_alignRight="@+id/updateCardView"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="-50dp"
                android:layout_marginRight="30dp"
                android:elevation="10dp">

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/updateCardView"
                android:layout_alignRight="@+id/updateCardView"
                android:layout_marginTop="-20dp"
                android:layout_marginRight="-20dp"
                android:elevation="8dp">

                <ImageButton
                    android:id="@+id/btRegister"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_add_wishlist" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/update_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/UpdateItem"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_below="@id/scrollView"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:layout_centerHorizontal="true"
        android:text="@string/DeleteItem"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/bg_button1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_below="@id/update_button"/>

</RelativeLayout>